<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".presentation.mainScreen.ui.dashboard.DashboardFragment">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_margin="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:src="@drawable/ic_person_24dp"
             android:layout_width="48dp"
             android:layout_height="48dp"/>
         <TextView
             android:layout_gravity="center"
             android:layout_marginStart="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:text="Kanneth Caldwell"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
    <View
        android:layout_margin="8dp"
        android:alpha="0.7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"/>
    <TextView
        android:drawableStart="@drawable/ic_car_24"
        android:drawablePadding="16dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/your_rides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:drawableStart="@drawable/ic_offer_24"
        android:drawablePadding="16dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:drawableStart="@drawable/ic_earn_24"
        android:drawablePadding="16dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/refer_earn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>